--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
   ],
   "routes": [
     {
+      "src": "/api-docs/(.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/api-docs",
+      "dest": "server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
